# predicting-student-success

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  data-science-template-guide.md  mkdocs.yml  pyproject.toml
.code_quality/: mypy.ini  ruff.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency_review.yml  docs.yml  pre-commit_autoupdate.yml  release.yml
conf/: config.yaml
data/: README.md
data/03_primary/: student_performance_combined.csv
data/08_reporting/: analysis_summary.md
data/08_reporting/tables/: classification_metrics.csv  cluster_metrics.csv  cluster_profiles.csv  data_summary.csv  permutation_importance.csv  regression_metrics.csv
docs/: final_presentation_outline.md  final_report_results_draft.md  index.md  milestone3_initial_results.md  resume_alignment.md
notebooks/: notebook_template.ipynb
src/: README.md  __init__.py
src/data/: student_performance.py
src/model/: clustering.py  evaluation.py
src/pipelines/training_pipeline/: run_analysis.py
tests/: test_example.py  test_student_performance.py
